7012339: JSR 292 crash in G1SATBCardTableModRefBS::write_ref_field_pre_work()

Reviewed-by: jrose, never